@@ -6,6 +6,10 @@ v0.39.5		24-Dec-2003
 		Binkp code cleanup.
 		Allow m_file command in binkp during file transfer in progress.
 
+	mbout:
+		Poll, remove poll and request failed to points which had no
+		point directory in the outbound, now the directory is created.
+
 	script:
 		Fixed NetBSD init script
 		All init scripts now clean the ~/var/run directory and start
